--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -1,9 +1,6 @@
 .btn {
     display: inline-block;
     padding: $button-padding;
-    border: 1px solid transparent;
-    border-radius: $button-border-radius;
-    outline: 0;
     font-family: $font-family-base;
     font-size: $font-size-base;
     line-height: $button-line-height;
@@ -13,6 +10,9 @@
     vertical-align: middle;
     cursor: pointer;
     user-select: none;
+    outline: 0;
+    border: $button-border-width solid transparent;
+    border-radius: $button-border-radius;
     transition: $button-transition;
     @include make-button($button-color, $button-background);
 
@@ -101,7 +101,7 @@
             border-radius: 0 $button-border-radius $button-border-radius 0;
         }
         &:not(:first-child) {
-            margin-left: -1px; // overlap borders
+            margin-left: -$button-border-width; // overlap borders
         }
         &:hover, &:focus {
             position: relative; // bring to foreground
