--- a/src/scss/components/_list.scss
+++ b/src/scss/components/_list.scss
@@ -13,11 +13,11 @@ ul.list {
     display: flex;
     padding: $list-item-padding;
     justify-content: flex-start;
-    border-bottom: 1px solid $list-item-border-color;
+    border-bottom: $list-item-border-width solid $list-item-border-color;
     background-color: $list-item-background;
 
     &:first-child {
-        border-top: 1px solid $list-item-border-color;
+        border-top: $list-item-border-width solid $list-item-border-color;
     }
 
     > *:not(:last-child) {
