--- a/src/scss/base/_theme.scss
+++ b/src/scss/base/_theme.scss
@@ -80,6 +80,14 @@ $container-widths: (
  *---------------------*/
 $border-radius-base: 0.25rem        !default;
 $transition-base:    all 280ms ease !default;
+$spacings-base: (
+    0: 0,
+    1: 0.25rem,
+    2: 0.5rem,
+    3: 1rem,
+    4: 2rem,
+    5: 3rem,
+) !default;
 
 // Z-indexes
 $z-popup:    10     !default;
