--- a/src/scss/components/_menu.scss
+++ b/src/scss/components/_menu.scss
@@ -2,23 +2,10 @@
     margin: 0;
     padding: 0;
     list-style: none;
-
-    &:not(.menu--inline):not(.menu--tabs) a.menu__item {
-        display: block;
-    }
 }
-.menu__item {
-    vertical-align: middle;
-
-    .icon {
-        margin-right: 0.5rem;
-
-        &.icon--right {
-            float: right;
-            margin-right: 0;
-            margin-left: .5rem;
-        }
-    }
+.menu__link {
+    display: block;
+    padding: $menu-link-padding;
 }
 
 // Inline
@@ -27,14 +14,10 @@
 }
 
 // Pills
-.menu--pills .menu__item {
-    padding: 0.5rem 1.125rem;
+.menu--pills .menu__link {
     border-radius: $border-radius-base;
 
-    a {
-        color: inherit;
-    }
-    &.active {
+    &.is-active {
         color: #FFF;
         background-color: $color-primary;
     }
@@ -51,16 +34,11 @@
         margin-bottom: -1px;
     }
     .menu__link {
-        display: block;
-        padding: 0.5rem 1.125rem;
         cursor: pointer;
         border: 1px solid transparent;
         border-radius: $border-radius-base $border-radius-base 0 0;
 
-        a {
-            color: inherit;
-        }
-        &.active {
+        &.is-active {
             color: $color-base;
             background-color: #fff;
             border-color: $input-border-color $input-border-color transparent;
