--- a/src/scss/components/_dropdown.scss
+++ b/src/scss/components/_dropdown.scss
@@ -31,6 +31,7 @@
     }
     .menu__item {
         display: block;
+        outline: 0;
         padding: $dropdown-item-padding;
         border-bottom: $dropdown-item-border-width solid $dropdown-item-border-color;
 
